[tool.poetry]
name = "islp_repo"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.2"
pandas = "1.5.3"
lxml = "4.9.3"
scikit-learn = "1.3.0"
joblib = "1.3.1"
statsmodels = "0.14.0"
lifelines = "0.27.7"
l0bnb = "1.0.0"
torch = "2.0.1"
torchvision = "0.15.2"
pytorch-lightning = "2.0.6"
torchinfo = "1.8.0"
torchmetrics = "1.0.1"
islp = "0.3.20"
scipy = "^1.12.0"
pygam = "0.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
